# QTproject

./: CMakeLists.txt  Cardsetting.cpp  QTC进展报告1.md  QTnote.md  README  README.md  YGO_simu.cpp  YGO战斗流程.md  cardbank_preview.cpp  cardbank_preview.h  cardbank_preview.ui  cardclass.cpp  cardclass.h  cardsetting.cpp  cardsetting.h  cardsetting.ui  cell.cpp  cell.h  dialog.h  dialog.ui  fightinterface.cpp  fightinterface.h  fightinterface.ui  fightpre.cpp  fightpre.h  fightpre.ui  helloworld.cpp  humanbot.cpp  humanbot.h  humanbot.ui  magic.cpp  magic.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monster.h  monster_origin.cpp  monster_origin.h  query.cpp  (+26 more)
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: QApplication.F5F27B8A8C959168.idx  QDialog.31756746F9BFEFC9.idx  QMainWindow.BFB572EB632B1C77.idx  QMessageBox.E58A81A4123D0A80.idx  QTimer.1345F5D3882823D7.idx  __stddef_max_align_t.h.2251BEEB26947829.idx  adxintrin.h.282D386469456923.idx  bmiintrin.h.A2166DB8CAA07447.idx  cardbank_preview.cpp.B41154FAB5310DAE.idx  cardbank_preview.h.C9D0B20BBDF7CFE6.idx  cardsetting.cpp.FCD47C17931253DA.idx  cardsetting.h.A6EA6E5750E572C3.idx  cctype.33BA47C4A481E5F1.idx  cfloat.758308B49A48F05E.idx  climits.89F4030E64753590.idx  corecrt.h.1BCDB07BEC5972CE.idx  corecrt_math.h.F85D25B1045D6B39.idx  corecrt_memcpy_s.h.7DF4A2D8287CFCCB.idx  corecrt_memory.h.45E31080DDEED62F.idx  corecrt_search.h.29A069B8326FF0BB.idx  corecrt_wconio.h.53DEC9018C5DD044.idx  corecrt_wio.h.6B4C26DD34179677.idx  corecrt_wstdio.h.FD5D5E6AE49D5A88.idx  corecrt_wstdlib.h.DAD9A43F776D407E.idx  corecrt_wstring.h.095D1ABAB97765BC.idx  corecrt_wtime.h.B867DB37FE7E9062.idx  crtdbg.h.FBF751B09CBC1891.idx  crtdefs.h.34F5C8CD81A9D8B2.idx  cstddef.C08CB036B25E39AB.idx  cstdint.15552DCD200643B4.idx  cstdio.C8237B301140AEAD.idx  cstdlib.F30194F4D36951CC.idx  cstring.1ECA57166B21DF6F.idx  ctime.5515B02E5743E01E.idx  cwchar.12279882F1F290ED.idx  dialog.cpp.AA46EBA542E61D77.idx  dialog.h.EB03F8DDB4EA1A3E.idx  eh.h.EFEB33E1CB7D5C8C.idx  emmintrin.h.B217E78305FAE40D.idx  exception.B8545B22FB35F109.idx  (+133 more)
card/: cardclass.cpp  cardclass.h  effect.cpp  effect.h  magic.h  monster.cpp  monster.h  monster_origin.cpp  specialsummon.cpp  specialsummon.h  testout  tmp.cpp  trap.cpp  trap.h
card/0/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
card/1/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
card/2/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
卡牌图片,信息与控件显示函数/: 图片&文本信息显示函数.cpp
卡牌图片,信息与控件显示函数/card/0/: 4.txt  6.txt  7.txt
卡牌图片,信息与控件显示函数/card/1/: 1.txt
